<resources>
    <string name="database_instance">https://secret-santa-application-default-rtdb.europe-west1.firebasedatabase.app</string>
    <string name="app_name">Secret_Santa_App</string>
    <string name="app_version">V1.01</string>
    <string name="homePageText">Hi, welcome to our secret santa app!</string>
    <string name="descriptionHat">Santas hoed</string>
    <string name="Password">Password</string>
    <string name="aanmaken">Create!</string>
    <string name="group_name">Group name</string>
    <string name="group_creation">Create new group</string>
    <string name="groupsHeader">Your secret santa groups:</string>
    <string name="group_more">My Groups</string>
    <string name="account_details">Account details</string>
    <string name="groupsName">"Name group: "</string>
    <string name="User_Add">Invite</string>
    <string name="group_code">I already got a code</string>
    <string name="group_code_fill">Join a group</string>
    <string name="group_code_hint">Fill in the code...</string>
    <string name="accountOverviewMore">Personal details</string>
    <string name="accountFavoList">Favorite list</string>
    <string name="Favo_create">Add a new item</string>
    <string name="language_selector">Choose a language</string>
    <string name="title_favo">Your favorite list</string>
    <string name="favo_name">Item name</string>
    <string name="favo_add">Add a new Item</string>
    <string name="Message_Create">Send a new message</string>
    <string name="Message_Group_Header">Group chat</string>
    <string name="Chat_Group">Group Chat</string>
    <string name="Message_Send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- error messages -->

    <string name="Name_Error">Please check your name</string>
    <string name="Email_Error">Please check your email</string>
    <string name="Pass_Error">Please check your password</string>
    <string name="Favo_Edit">Edit</string>
    <string name="Favo_Active">Is Active</string>
    <string name="Favo_Link">Link</string>
    <string name="Favo_Extra_Text">Extra info</string>
    <string name="Favo_Save">Save</string>
    <string name="Favo_Single_item_title">Favorite item</string>
    <string name="Remove">Remove</string>

</resources>