<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B53A3A"
    android:padding="20dp"
    tools:context=".views.GroupOverviewSSA">

    <secret.santa.application.CustomGifView
        android:id="@+id/customGifView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </secret.santa.application.CustomGifView>

    <secret.santa.application.CustomGifView
        android:id="@+id/customGifView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </secret.santa.application.CustomGifView>

    <secret.santa.application.CustomGifView
        android:id="@+id/customGifView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </secret.santa.application.CustomGifView>

    <TextView
        android:id="@+id/txtFavoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mountains_of_christmas_bold"
        android:text="@string/Favo_Single_item_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/customGifView4" />

    <Button
        android:id="@+id/btnFavoEdit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_btn_black"
        android:padding="15dp"
        android:text="@string/Favo_Edit"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDeleteItem"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cross_sign" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnFavoEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFavoTitle">

        <LinearLayout
            android:id="@+id/layoutTitles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:fontFamily="@font/mountains_of_christmas_bold"
                android:text="@string/favo_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:fontFamily="@font/mountains_of_christmas_bold"
                android:text="@string/Favo_Active"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:fontFamily="@font/mountains_of_christmas_bold"
                android:text="@string/Favo_Link"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtExtraText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:fontFamily="@font/mountains_of_christmas_bold"
                android:text="@string/Favo_Extra_Text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtItemNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Switch
                android:id="@+id/switchIsActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center|right"
                android:minHeight="48dp"
                android:scrollbarSize="5dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtLinkValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/txtExtraInfoValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>