<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.GroupOverviewSSA" android:background="#B53A3A" android:padding="20dp">

    <com.example.secret_santa_app.CustomGifView android:layout_width="wrap_content" android:layout_height="0dp"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:id="@+id/customGifView2"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                app:layout_constraintHorizontal_bias="0.0">

    </com.example.secret_santa_app.CustomGifView>
    <com.example.secret_santa_app.CustomGifView android:layout_width="wrap_content" android:layout_height="0dp"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:id="@+id/customGifView3"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                app:layout_constraintHorizontal_bias="1.0">

    </com.example.secret_santa_app.CustomGifView>

    <com.example.secret_santa_app.CustomGifView
        android:id="@+id/customGifView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </com.example.secret_santa_app.CustomGifView>
    <include layout="@layout/toolbar_actionbar_custom" />
    <TextView
        android:id="@+id/regMessageField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/aanmaken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/headerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/mountains_of_christmas_bold"
        android:text="@string/groupsHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regMessageField" />

    <LinearLayout
        android:id="@+id/layoutList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnGroupCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerGroup" />

    <Button
        android:id="@+id/btnGroupCreation"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_btn_black"
        android:fontFamily="sans-serif-medium"
        android:padding="15dp"
        android:text="@string/group_creation"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#fff"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGroupCode"
        android:layout_width="120dp"
        android:textSize="12sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_btn_black"
        android:fontFamily="sans-serif-medium"
        android:padding="15dp"
        android:text="@string/group_code"
        android:textColor="#fff"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>