<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.GroupOverviewSSA" android:background="#B53A3A" android:padding="20dp">

    <secret.santa.application.CustomGifView
        android:layout_width="wrap_content" android:layout_height="0dp"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:id="@+id/customGifView2"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                app:layout_constraintHorizontal_bias="0.0">

    </secret.santa.application.CustomGifView>
    <secret.santa.application.CustomGifView
        android:layout_width="wrap_content" android:layout_height="0dp"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:id="@+id/customGifView3"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                app:layout_constraintHorizontal_bias="1.0">

    </secret.santa.application.CustomGifView>

    <secret.santa.application.CustomGifView
        android:id="@+id/customGifView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </secret.santa.application.CustomGifView>

    <TextView
        android:id="@+id/regMessageField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="95dp"
        android:layout_height="79dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/aanmaken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/headerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/mountains_of_christmas_bold"
        android:text="@string/title_favo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_favoItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regMessageField" />

    <Button
        android:id="@+id/btnFavoCreation"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_btn_black"
        android:padding="15dp"
        android:text="@string/Favo_create"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/recyclerView_favoItems"
        android:layout_width="0dp"
        android:layout_height="326dp"
        app:layout_constraintBottom_toTopOf="@+id/btnFavoCreation"
        app:layout_constraintEnd_toEndOf="@+id/customGifView3"
        app:layout_constraintStart_toStartOf="@+id/customGifView2"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>