<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.GroupOverviewSSA" android:background="#B53A3A" android:padding="20dp">

    <secret.santa.application.CustomGifView
        android:layout_width="wrap_content" android:layout_height="0dp"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:id="@+id/customGifView2"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                app:layout_constraintHorizontal_bias="0.0">

    </secret.santa.application.CustomGifView>


    <secret.santa.application.CustomGifView
        android:layout_width="wrap_content" android:layout_height="0dp"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:id="@+id/customGifView3"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                app:layout_constraintHorizontal_bias="1.0">

    </secret.santa.application.CustomGifView>
    <secret.santa.application.CustomGifView
        android:id="@+id/customGifView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </secret.santa.application.CustomGifView>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="366dp"
        android:layout_height="71dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mountains_of_christmas_bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <Button
        android:id="@+id/btnGroupOverview"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_btn_gradient"
        android:fontFamily="@font/mountains_of_christmas_bold"
        android:text="@string/group_more"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/btnAccount"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_btn_gradient"
        android:fontFamily="@font/mountains_of_christmas_bold"
        android:text="@string/account_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGroupOverview" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>